--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Akzara</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Akzara</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lora|Nunito&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="startGame()">
-<script src="game.js"></script>
-<script src="main.js"></script>
+
+<body>
+  <div id="gameContainer">
+    <div class="audio_controls">
+      <span class="audio_controls_control" id="prevBtn"><i class="fad fa-backward"></i></i></span>
+      <span class="audio_controls_control" id="nextBtn"><i class="fad fa-forward"></i></i></span>
+      <span class="audio_controls_text" id="nowPlaying"></span>
+      <span class="audio_controls_text" id="musicType"></span>
+      <span class="audio_controls_control" id="playBtn"><i class="fad fa-play"></i></span>
+      <span class="audio_controls_control" id="muteBtn"><i class="fad fa-volume"></i></span>
+    </div>
+  </div>
+  <div class="overlay" id="overlay">
+    <nav class="nav">
+      <ul>
+        <li><a href="" title="" id="newGameBtn">New Game</a></li>
+        <li><a href="" title="" id="resumeBtn">Resume</a></li>
+        <li><a href="" title="">Help</a></li>
+        <li><a href="" title="">Visit Me</a></li>
+      </ul>
+    </nav>
+    <div class="score-board">
+      <h1 class="title">High Scores</h1>
+      <div class="high-scores">
+        <ol>
+          <li>10000</li>
+          <li>200</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.min.js"></script>
+  <script src="https://kit.fontawesome.com/fc2557bcd2.js" crossorigin="anonymous"></script>
+  <script src="radio.js"></script>
+  <script src="game.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
