:zap: save highscore

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="score-board">
       <h1 class="title">High Scores</h1>
       <div class="high-scores">
-        <ol>
+        <ol id="highScoresList">
           <li>10000</li>
           <li>200</li>
         </ol>
