:sparkles: added boundary check of player

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <ul>
         <li><a href="" title="" id="newGameBtn">New Game</a></li>
         <li><a href="" title="" id="resumeBtn">Resume</a></li>
+        <li><a href="" title="" id="stopRadio">Stop Radio</a></li>
         <li><a href="" title="">Help</a></li>
         <li><a href="" title="">Visit Me</a></li>
       </ul>
